fix: z-index

--- a/packages/react/src/less/variable.less
+++ b/packages/react/src/less/variable.less
@@ -76,8 +76,8 @@
 
     // zIndex
   --t-z-index-drawer: 1030;
-  --t-z-index-popup: 2000;
-  --t-z-index-modal: 5000;
+  --t-z-index-modal: 2000;
+  --t-z-index-popup: 5000;
   --t-z-index-tip: 7000;
   --t-z-index-nprogress: 9999;
 }
